[package]
name = "zhifeng_bhtree"
version = "0.0.20240527"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.202", features = ["derive"] }#, optional = true }
serde_json = { version = "1.0.117" }#, optional = true }

[features]
#deserial = ["dep:serde", "dep:serde_json"]

[[test]]
name = "check_new"
#required-features = ["deserial"]