[package]
name = "zhifeng_impl_barnes_hut_tree"
version = "0.0.20240527"
edition = "2021"
categories = ["data-structures"]
description = ""
license = "AGPL-3.0-only"
readme = "ReadMe.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.202", features = ["derive"], optional = true }
serde_json = { version = "1.0.117" , optional = true }

[dev-dependencies]
rand = "0.8.5"
criterion = "0.3"

[features]
serialize = ["dep:serde", "dep:serde_json"]

[[test]]
name = "check_new"
required-features = ["serialize"]

[[test]]
name = "check_calc"
required-features = ["serialize"]

[[bench]]
name = "cmp_n_body_force_sim"
harness = false